# routes/orderRoutes.js
@@ -6,6 +6,7 @@ const authenticateToken = require('../auth/auth');
 
 router.post('/create/:userid', authenticateToken, OrderController.CreateOrder);
 router.patch('/modify/:userid', authenticateToken, OrderController.ModifyOrder);
+router.patch('/cancel/:userid', authenticateToken, OrderController.CancelOrder);
 
 module.exports = router;
 
